<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jumpster</string>
    <string name="action_settings">Settings</string>
    <string name="phone_number_plus">Mobile phone (+XXYZZZZZZZZ)</string>
    <string name="create_account">Create account</string>
    <string name="email">Email</string>
    <string name="name">First Name</string>
    <string name="choose_image_origin">Load profile picture from</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="choose_a_picture">Choose a picture</string>
    <string name="password">Password</string>
    <string name="lastName">Last Name</string>
    <string name="title_activity_snatch">Retrieve</string>
    <string name="snatch">Retrieve</string>
    <string name="action_snatch">Retrieve</string>
    <string name="contacts_snatched">Contacts retrieved!</string>
    <string name="sms_verification">To verify your phone number, you will be sent a verification code via SMS. You will have to enter this code on the next screen.</string>
    <string name="send_sms">Send SMS</string>
    <string name="verification_code">Verification code</string>
    <string name="reach">Reach</string>
    <string name="search_query">Search for contacts…</string>
    <string name="action_add_friend">Add new friend</string>
    <string name="title_activity_add_friend">Add new friend</string>
    <string name="uploading_contacts">The verification SMS should arrive shortly. In the meanwhile, we are uploading your current phonebook to Jumpster.</string>
    <string name="still_uploading">Still uploading contacts…</string>
    <string name="title_activity_friend_requests">Friend requests</string>
    <string name="action_friend_requests">Friend requests</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="empty_friends">You don\'t have friends yet.\nYou can add using the button above.</string>
    <string name="search">Search</string>
    <string name="do_login">Already registered?</string>
    <string name="empty_requests">You don\'t have friend\nrequests pending.</string>
    <string name="login_existing_account">Login</string>
    <string name="account">Account</string>
    <string name="toc">Terms and Conditions</string>
    <string name="sms_message">Hey! I\'m using Jumpster! Get it at http://www.jumpsterapp.com</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="change_avatar">Change Profile Picture</string>
    <string name="sync_contacts">Sync Contacts</string>
    <string name="update">Update Profile</string>
    <string name="title_activity_account_settings">Account Settings</string>
    <string name="profile_updated">Profile updated!</string>
    <string name="friends_in_jumpster">Friends in Jumpster</string>
    <string name="invite_friends_to_jumpster">Invite friends to Jumpster</string>
    <string name="wrong_code">Your verification code is incorrect. Please try again.</string>
    <string name="contacts_synced">Contacts synced!</string>
    <string name="empty_search">No results.</string>
    <string name="delete_friend">Unfriend</string>
    <string name="unfriended">"You are no longer friends with "</string>
    <string name="next_step">Continue</string>
    <string name="network_error">Network error, retrying to login…</string>
    <string name="resend_code">Resend SMS Code</string>
    <string name="delete_account">Delete account</string>
    <string name="empty_field">There is an empty required field.</string>
    <string name="dialog_really_delete">Do you really want to delete your Jumpster account? It takes a couple of minutes to erase all your information.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="friends">Friends</string>
    <string name="contacts">Contacts</string>
    <string name="reach_s">"Reach: "</string>
    <string name="searching">Searching…</string>
    <string name="no_result">No results.\nPrefix \'@\' to search for commercial numbers.</string>

</resources>
