<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="cl.snatch.snatch.activities.MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        android:orderInCategory="100"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/search"/>

    <item android:id="@+id/action_add_friend" android:orderInCategory="101" android:title="@string/action_add_friend" app:showAsAction="ifRoom" android:icon="@drawable/ic_person_add" />
    <item android:id="@+id/action_friend_requests" android:orderInCategory="102" android:title="@string/action_friend_requests" android:icon="@drawable/ic_notifications" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings" android:visible="false"
        android:orderInCategory="103" app:showAsAction="never" />
</menu>
