<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp">

        <com.pkmmte.view.CircularImageView android:id="@+id/avatar"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:src="@drawable/ic_avatar"
            android:clickable="true"
            app:border="true"
            app:border_color="#FFFFFFFF"
            app:border_width="4dp"
            app:selector="true"
            app:selector_color="#4403a9f4"
            app:selector_stroke_color="#aa5677fc"
            app:selector_stroke_width="4dp"
            app:shadow="true"
            android:layout_centerHorizontal="true" />

        <EditText android:id="@+id/phone"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/avatar"
            android:hint="@string/phone_number_plus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone|textNoSuggestions" />

        <EditText android:id="@+id/firstName"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/phone"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />

        <EditText android:id="@+id/lastName"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/firstName"
            android:hint="@string/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />

        <EditText android:id="@+id/email"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/lastName"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

        <EditText android:id="@+id/password"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/email"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <Button
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:id="@+id/register"
            android:layout_below="@+id/password"
            android:layout_alignRight="@+id/email"
            android:layout_alignEnd="@+id/email" />

    </RelativeLayout>

</ScrollView>