<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/actionbar"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".LoginActivity"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="32dp">

            <com.pkmmte.view.CircularImageView android:id="@+id/avatar"
                android:layout_width="144dp"
                android:layout_height="144dp"
                android:src="@drawable/ic_avatar"
                android:clickable="true"
                app:border="true"
                app:border_color="#FFFFFFFF"
                app:border_width="4dp"
                app:selector="true"
                app:selector_color="#4403a9f4"
                app:selector_stroke_color="#aa5677fc"
                app:selector_stroke_width="4dp"
                app:shadow="true"
                android:layout_centerHorizontal="true" />

            <EditText android:id="@+id/firstName"
                android:layout_marginTop="8dp"
                android:layout_below="@+id/avatar"
                android:hint="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />

            <EditText android:id="@+id/lastName"
                android:layout_marginTop="8dp"
                android:layout_below="@+id/firstName"
                android:hint="@string/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />

            <Button
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:id="@+id/update"
                android:layout_below="@+id/lastName"
                android:layout_alignRight="@+id/lastName"
                android:layout_alignEnd="@+id/lastName" />

            <Button
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sync_contacts"
                android:id="@+id/sync"
                android:layout_below="@+id/lastName"
                android:layout_toLeftOf="@id/update"/>

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:visibility="invisible"
                android:indeterminate="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pb"
                android:layout_alignBaseline="@id/sync"
                android:layout_marginRight="30dp"
                android:layout_toLeftOf="@id/sync"/>
        </RelativeLayout>

    </ScrollView>
</LinearLayout>